gcc/testsuite/rust/rustc/ui/mismatched_types/for-loop-has-unit-body.rs
fn main() {
    for x in 0..3 {
        x // { dg-error ".E0308." "" { target *-*-* } }
    }
}

